# SCMS-Fetch

./: README.md  git - Shortcut.lnk
FetchProject/: CMakeLists.txt  package.xml
FetchProject/launch/: turtleBot.launch
FetchProject/worlds/: simWorld.world
Fetch_robot_sim/launch/: followTurtleBot.launch  mazeFetch.launch:Zone.Identifier
Fetch_robot_sim/worlds/test_environment/: model.sdf
assignment/World/: test_world
assignment/src/: ackerman.cpp  controller.h  laserprocessing.cpp  main.cpp
assignment_sample/: CMakeLists.txt
assignment_sample/src/: ackerman.h  controller.cpp  controllerinterface.h  laserprocessing.h
fetch_follow_target/: CMakeLists.txt  TEST1.txt  estebanmodel.txt  followTarget_daniel.txt  followTarget_header.txt  model.txt  package.xml  temp.txt
fetch_follow_target/include/: followTarget.h  laserScan.h  laserprocessing.h
fetch_follow_target/include/fetch_follow_target/: follow_target.h
fetch_follow_target/launch/: arTracking.launch  customFollowTarget.launch  customTurtleBotOnly.launch  customTurtleBotSpawn.launch  fetchBotOnly.launch  fetchFollow.launch  followCustomTurtle.launch  followTarget.launch  followTargetEXTRA.txt  followTest.launch  guiderBot.launch  main.launch  spawn_sdf.launch  turtleBotOnly.launch  turtleBotSpawn.launch  turtlebot_spawn.launch
fetch_follow_target/models/custom_tb3.urdf.xacro/: model.config  model.sdf
fetch_follow_target/models/tb3cust/tb3_custom/: model.config  model.sdf
fetch_follow_target/models/turtleBot/: model.config  model.sdf  white_turtle.sdf
fetch_follow_target/models/turtle_custom/: model.config
fetch_follow_target/models/turtlebot+qrcode/: jens_tut_ciube.dae  turtlebot3_burger.urdf.xacro
fetch_follow_target/nodes/: teleop_twist_key.py  turtlebot3_teleop_key
fetch_follow_target/rviz/: fetch_rviz.rviz
fetch_follow_target/src/: environmentSensing.cpp  followTarget.cpp  followTarget.h  follow_target.cpp  guider_joy_teleop.cpp  joy_teleop.cpp  laserScan.cpp  laserprocessing.cpp  laserprocessing.h  main.cpp
fetch_follow_target/worlds/: maze.world  maze_test.sdf  simWorld.world  target_follow_maze.world
fetch_follow_target/worlds/mini_maze/: model.config  model.sdf
fetch_follow_target/worlds/test_environment/: TestWorld  model.config
